--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
   "private": true,
   "dependencies": {
     "axios": "^0.19.0",
-    "lodash.throttle": "^4.1.1",
+    "lodash": "^4.17.15",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-loading-skeleton": "^1.2.0",
     "react-scripts": "3.0.1"
   },
   "scripts": {
