--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-loading-skeleton": "^1.2.0",
-    "react-scripts": "3.0.1"
+    "react-scripts": "3.0.1",
+    "styled-components": "^5.0.0-beta.8-groupsizefix"
   },
   "scripts": {
     "start": "react-scripts start",
