--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "axios": "^0.19.0",
+    "date-fns": "^2.5.0",
     "downshift": "^3.3.5",
     "lodash": "^4.17.15",
     "react": "^16.8.6",
