--- a/package.json
+++ b/package.json
@@ -3,11 +3,17 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@reach/combobox": "^0.5.3",
     "axios": "^0.19.0",
-    "lodash.throttle": "^4.1.1",
+    "date-fns": "^2.5.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "react-scripts": "3.0.1"
+    "react-github-corners": "^0.2.1",
+    "react-loading-skeleton": "^1.2.0",
+    "react-scripts": "3.0.1",
+    "styled-components": "^5.0.0-beta.8-groupsizefix",
+    "use-throttle": "^0.0.3",
+    "zdog": "^1.1.1"
   },
   "scripts": {
     "start": "react-scripts start",
