--- a/package.json
+++ b/package.json
@@ -4,10 +4,16 @@
   "private": true,
   "dependencies": {
     "axios": "^0.19.0",
-    "lodash.throttle": "^4.1.1",
+    "date-fns": "^2.5.0",
+    "downshift": "^3.3.5",
+    "lodash": "^4.17.15",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "react-scripts": "3.0.1"
+    "react-github-corners": "^0.2.1",
+    "react-loading-skeleton": "^1.2.0",
+    "react-scripts": "3.0.1",
+    "styled-components": "^5.0.0-beta.8-groupsizefix",
+    "use-debounce": "^3.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
