--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "axios": "^0.19.0",
     "date-fns": "^2.5.0",
     "downshift": "^3.3.5",
-    "lodash": "^4.17.15",
+    "framer-motion": "^1.6.15",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-github-corners": "^0.2.1",
