--- a/package.json
+++ b/package.json
@@ -7,12 +7,12 @@
     "date-fns": "^2.5.0",
     "downshift": "^3.3.5",
     "framer-motion": "^1.6.15",
+    "lodash": "^4.17.15",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-loading-skeleton": "^1.2.0",
     "react-scripts": "3.0.1",
-    "styled-components": "^5.0.0-beta.8-groupsizefix",
-    "use-debounce": "^3.1.0"
+    "styled-components": "^5.0.0-beta.8-groupsizefix"
   },
   "scripts": {
     "start": "react-scripts start",
